--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "chart.js": "^2.9.4",
+    "google-map-react": "^2.1.9",
+    "leaflet": "^1.7.1",
     "numeral": "^2.0.6",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^17.0.1",
+    "react-leaflet": "^3.0.0",
     "react-scripts": "4.0.0"
   },
   "scripts": {
